--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,13 +1,17 @@
-image: cirrusci/flutter:latest
+image: node
+
+before_script:
+  - npm install
+
+cache:
+  paths:
+    - node_modules/
 
 pages:
-  stage: deploy
   script:
-    - flutter build web
-    - echo -e "<script>(function () {document.write('<base href=\"' + document.location.pathname + '\" />');}());</script>\n$(cat build/web/index.html)" > build/web/index.html
-    - cp -r build/web public
+    - npm run generate
   artifacts:
     paths:
       - public
   only:
-    - main
+    - master
