--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 stages:
   # - test
-  - dockerClean
+  # - dockerClean
   - deploy
 
 # code_quality:
@@ -33,11 +33,12 @@ stages:
 #     reports:
 #       junit: report.xml
 
-dockerCleaner:
-  stage: dockerClean
-  script:
-    - docker image prune -a
-    - docker system prune -a
+# no need for dockerCleaner anymore
+# dockerCleaner:
+#   stage: dockerClean
+#   script:
+#     - docker image prune -a
+#     - docker system prune -a
 
 pages:
   stage: deploy
@@ -54,3 +55,4 @@ pages:
       - public
   only:
     - main
+
