updatee: put kaka tmp

--- a/web/manifest.json
+++ b/web/manifest.json
@@ -1,6 +1,6 @@
 {
-    "name": "homeprojectpageflutter",
-    "short_name": "homeprojectpageflutter",
+    "name": "igem",
+    "short_name": "igem",
     "start_url": ".",
     "display": "standalone",
     "background_color": "#0175C2",
