--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,6 +16,7 @@ pages:
   image: "cirrusci/flutter:latest"
   script:
     - flutter build web --web-renderer html
+    - echo -e "<script>(function () {document.write('<base href=\"' + document.location.pathname + '\" />');}());</script>\n$(cat build/web/index.html)" > build/web/index.html
     - ls build/web
     - rm -rf build/web/canvaskit
     - cp -r build/web public
