--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,7 +16,7 @@ pages:
   image: "cirrusci/flutter:latest"
   script:
     - flutter build web --web-renderer html
-    - <script>(function () {document.write('<base href=\"' + document.location.pathname + '\ '+ 'teams' + '" />');}());</script>\n$(cat build/web/index.html)" > build/web/index.html
+    - echo -e <script>(function () {document.write('<base href=\"' + document.location.pathname + '/teams' + '\" />');}());</script>\n$(cat build/web/index.html)" > build/web/index.html
     - rm -rf build/web/canvaskit
     - mv index.html teams.html
     - ls build/web
